Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub)

Change Log:
----------------------------------------------------------------------

2.0.9.3
----------------------------------------------------------------------
- Fix: Z-index issue in Dashboard where wide widgets where covered by the main-menu.

2.0.9.2
----------------------------------------------------------------------
- Fix: Sidebar Locations "Front Page" and "Post Index" now work correctly.

2.0.9.1
----------------------------------------------------------------------
- Fix: Sidebars now support unicode-text in name/description.
- Minor: New debugging output that explains why a sidebar/widget is displayed.

2.0.9
----------------------------------------------------------------------
- Fix: Fixed issue with WP sidebar chooser right after creating a new sidebar.
- Fix: Fixed various issues when flagging a sidebar s replaceable.
- Fix: Plugin will not load in accessibility mode but display a notice instead.
- Minor fix: Make code compatible with PHP 5.2.4
- Minor fix: Slight improvement of ajax stability
- Minor fix: Plugin now requires capability "edit_theme_options"

2.0.8
----------------------------------------------------------------------
- Fix: Fixed issue with settings not being saved correctly.

2.0.7
----------------------------------------------------------------------
- Fix: Fixed issue with some people losing some sidebar settings after update.

2.0.6.1
----------------------------------------------------------------------
- Minor fix: Use WordPress core functions to get URL to javascript files.
- Minor fix: Refactor function name to avoid misunderstandings.

2.0.6
----------------------------------------------------------------------
- Fixed: Widgets that are registered via old API no longer break the page (again).
- Fixed: After importing data the widgets page is reloaded to show new sidebars.