@@ -7,6 +7,7 @@ Change Log:
 2.0.9.3
 ----------------------------------------------------------------------
 - Fix: Z-index issue in Dashboard where wide widgets where covered by the main-menu.
+- Fix: Added compatibility for static front-page sidebars with version 2.0.9
 
 2.0.9.2
 ----------------------------------------------------------------------
